Add Inferencing on the folder. Load images one by one from the designated folder and save the results to results folder

--- a/SJI/SJI.rc
+++ b/SJI/SJI.rc
@@ -273,6 +273,7 @@ BEGIN
     BEGIN
         MENUITEM "RunInference",                ID_INFERENCING_RUNINFERENCE
         MENUITEM "Test Segments",               ID_INFERENCING_TESTSEGMENTS
+        MENUITEM "RunInferenceOnFolder",        ID_INFERENCING_RUNINFERENCEONFOLDER
     END
 END
 
