--- a/SJI/SJI.vcxproj.filters
+++ b/SJI/SJI.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClInclude Include="BridgeResult.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SelectOptions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SJI.cpp">
@@ -126,6 +129,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="BridgeResult.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SelectOptions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
